--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="about-info">
             <p><span> Hi!, Nama saya Dayen Manoppo biasa dipanggil Dayen, Mahasiswa dari Universitas Sam Ratulangi Manado.</span></p>
             <p>
-              Saya anak kedua dari tiga bersaudara, hobi saya bermain gameselain hobi bermain game, saya juga tertarik dalam dunia pemrograman. Sudah lama saya merasa ada kemungkinan yang tak terbatas yang ditawarkan oleh dunia teknologi
+              Saya anak kedua dari tiga bersaudara, hobi saya bermain game, selain hobi bermain game, saya juga tertarik dalam dunia pemrograman. Sudah lama saya merasa ada kemungkinan yang tak terbatas yang ditawarkan oleh dunia teknologi
               dan pemrograman. Mengetahui bahwa kita dapat menciptakan sesuatu dari nol menggunakan bahasa pemrograman, membangun aplikasi yang bermanfaat, atau bahkan mengotomatiskan dan memudahkan tugas-tugas sehari-hari. Setiap kali saya
               mempelajari bahasa pemrograman baru atau menyelesaikan proyek pemrograman, saya merasa seperti sedang memecahkan teka-teki yang menantang, dan itu memberi saya kepuasan ketika berhasil menyelesaikannya.
             </p>
