--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <div class="logo">
             <a href="index.html">Dayen</a>
           </div>
-          <div class="arrow-btn outer-shadow hover-shadow">
+          <div class="menu-btn outer-shadow hover-shadow">
             <ul>
-              <li><img src="img/arrow-btn.png" /></li>
+              <li><img src="img/menu.png" /></li>
             </ul>
           </div>
         </div>
