--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <article>
                 <h2>5 Teknologi Inovatif yang Akan Mengubah Cara Kita Bekerja di Masa Depan</h2>
                 <br />
-                <p><a href="blog.html" target="_blank">READ MORE >>></a></p>
+                <p><a href="https://www.forbes.com/innovation/" target="_blank">READ MORE >>></a></p>
               </article>
             </div>
           </div>
@@ -123,7 +123,7 @@
               <article>
                 <h2>Potensi Esport Game Mobile Legends dalam Dunia Kompetitif</h2>
                 <br />
-                <p><a href="blog.html" target="_blank">READ MORE ></a></p>
+                <p><a href="https://www.esportstalk.com/" target="_blank">READ MORE ></a></p>
               </article>
             </div>
           </div>
@@ -133,7 +133,7 @@
                 <h2>Menjaga Kesehatan Mental di Era Digital</h2>
                 <br />
                 <br />
-                <p><a href="blog.html" target="_blank">READ MORE ></a></p>
+                <p><a href="https://www.helpguide.org/articles/mental-health/social-media-and-mental-health.htm" target="_blank">READ MORE ></a></p>
               </article>
             </div>
           </div>
@@ -210,7 +210,7 @@
             <div class="contact-item-inner outer-shadow">
               <img src="img/call.png" />
               <span>Phone</span>
-              <p>+62 831-3107-8783</p>
+              <p>+62 831 3107 8783</p>
             </div>
           </div>
           <div class="contact-item">
