--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dayen - Profolio</title>
+    <title>Dayen - Portfolio</title>
     <!-- main css -->
     <link rel="stylesheet" href="css/style.css" />
     <!-- responsive css -->
@@ -112,28 +112,27 @@
           <div class="blog-article">
             <div class="blog-article-inner outer-shadow">
               <article>
-                <h2>5 Teknologi Inovatif yang Akan Mengubah Cara Kita Bekerja di Masa Depan</h2>
+                <h2>Tekken 8 - Warisan Legendaris Melanjutkan Pertarungan Epik</h2>
                 <br />
-                <p><a href="https://www.forbes.com/innovation/" target="_blank">READ MORE >>></a></p>
+                <p><a href="https://www.gamespot.com/articles/tekken-8-everything-we-know/1100-6509189/" target="_blank">READ MORE >>></a></p>
               </article>
             </div>
           </div>
           <div class="blog-article">
             <div class="blog-article-inner outer-shadow">
               <article>
-                <h2>Potensi Esport Game Mobile Legends dalam Dunia Kompetitif</h2>
+                <h2>Valorant - Sensasi Baru dalam Bidikan Taktis Dan Strategis</h2>
                 <br />
-                <p><a href="https://www.esportstalk.com/" target="_blank">READ MORE ></a></p>
+                <p><a href="https://dotesports.com/valorant/news/valorant-review-riot-games-crisp-tactical-shooter" target="_blank">READ MORE ></a></p>
               </article>
             </div>
           </div>
           <div class="blog-article">
             <div class="blog-article-inner outer-shadow">
               <article>
-                <h2>Menjaga Kesehatan Mental di Era Digital</h2>
+                <h2>Mobile Legends - Petualangan MOBA di Genggaman Tangan</h2>
                 <br />
-                <br />
-                <p><a href="https://www.helpguide.org/articles/mental-health/social-media-and-mental-health.htm" target="_blank">READ MORE ></a></p>
+                <p><a href="https://www.gamerevolution.com/review/677975-mobile-legends-bang-bang-review-mobile-moba-done-right" target="_blank">READ MORE ></a></p>
               </article>
             </div>
           </div>
